# VRPLIB

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.md  Parser.py  README.md  README.org  pyproject.toml
.github/workflows/: CI.yml  cvrplib.yaml  publish.yml  pycvrplib.yml  vrplib.yaml  vrplib.yml
cvrplib/: __init__.py  constants.py  cvrp.py  download.py  instance_data.csv  list_names.py  parse_instance.py  parse_solution.py  utils.py  vrptw.py  write.py
cvrplib/download/: __init__.py  download.py  download_instance.py  download_solution.py  download_utils.py  list_names.py
cvrplib/parse/: parse_distances.py  parse_solomon.py  parse_solution.py  parse_utils.py  parse_vrplib.py
cvrplib/read/: __init__.py  cvrp.py  parse_instance.py  parse_solomon.py  parse_solution.py  parse_vrplib.py  read.py  read_instance.py  read_solution.py  utils.py  vrptw.py
cvrplib/write/: write_instance.py  write_solution.py
data/: Antwerp1.sol  X-n101-k25.vrp
data/CVRPLIB/A/: A-n32-k5.sol  A-n33-k5.sol  A-n33-k6.sol  A-n34-k5.sol  A-n36-k5.sol  A-n37-k5.sol  A-n37-k6.sol  A-n38-k5.sol  A-n39-k5.sol  A-n39-k6.sol  A-n44-k6.sol  A-n45-k6.sol  A-n45-k7.sol  A-n46-k7.sol  A-n48-k7.sol  A-n53-k7.sol  A-n54-k7.sol  A-n55-k9.sol  A-n60-k9.sol  A-n61-k9.sol  A-n62-k8.sol  A-n63-k10.sol  A-n63-k9.sol  A-n64-k9.sol  A-n65-k9.sol  A-n69-k9.sol  A-n80-k10.sol
data/CVRPLIB/B/: B-n34-k5.sol  B-n35-k5.sol  B-n38-k6.sol  B-n39-k5.sol  B-n41-k6.sol  B-n43-k6.sol  B-n44-k7.sol  B-n45-k5.sol  B-n45-k6.sol  B-n50-k7.sol  B-n50-k8.sol  B-n51-k7.sol  B-n52-k7.sol  B-n56-k7.sol  B-n57-k7.sol  B-n57-k9.sol  B-n63-k10.sol  B-n64-k9.sol  B-n66-k9.sol  B-n67-k10.sol  B-n68-k9.sol  B-n78-k10.sol
data/CVRPLIB/E/: E-n101-k14.sol  E-n101-k8.sol  E-n22-k4.sol  E-n23-k3.sol  E-n30-k3.sol  E-n31-k7.sol  E-n33-k4.sol  E-n51-k5.sol  E-n76-k10.sol  E-n76-k14.sol  E-n76-k7.sol  E-n76-k8.sol
data/CVRPLIB/F/: F-n135-k7.sol  F-n45-k4.sol  F-n72-k4.sol
data/CVRPLIB/M/: M-n121-k7.sol  M-n151-k12.sol  M-n200-k16.sol  M-n200-k17.sol
data/CVRPLIB/P/: P-n101-k4.sol  P-n19-k2.sol  P-n20-k2.sol  P-n21-k2.sol  P-n22-k2.sol  P-n22-k8.sol  P-n23-k8.sol  P-n40-k5.sol  P-n45-k5.sol  P-n50-k10.sol  P-n50-k7.sol  P-n50-k8.sol  P-n51-k10.sol  P-n55-k10.sol  P-n55-k15.sol  P-n55-k7.sol  P-n55-k8.sol  P-n60-k10.sol  P-n60-k15.sol  P-n65-k10.sol  P-n70-k10.sol  P-n76-k4.sol  P-n76-k5.sol
data/cvrplib/: Antwerp1.vrp  F-n72-k4.sol  Golden_1.sol  M-n101-k10.sol  X-n101-k25.sol  tai75a.vrp
data/euro-neurips/: ORTEC-VRPTW-ASYM-00c5356f-d1-n258-k12.txt
pycvrplib/: Instance.py  __init__.py  _parse_utils.py  constants.py  cvrp.py  download.py  list_instances.py  list_names.py  names.csv  parse_instance.py  parse_solution.py  read.py  utils.py  vrptw.py
tests/: _utils.py  test_cvrp.py  test_download.py  test_instances.py  test_list_instances.py  test_list_names.py  test_parser.py  test_read.py  test_solutions.py  test_utils.py  test_vrptw.py  test_write.py  utils.py
tests/data/: B-n31-k5.sol  C1_2_1.sol  C1_2_1.txt  Li_21.sol  NoColonSpecification.txt  P-n16-k8.sol
tests/download/: test_download.py  test_download_instance.py  test_download_set.py  test_download_solution.py  test_download_utils.py  test_list_names.py
tests/parse/: test_parse_distances.py  test_parse_solomon.py  test_parse_solution.py  test_parse_utils.py  test_parse_vrplib.py
tests/read/: test_cvrp.py  test_distances.py  test_read.py  test_read_instance.py  test_read_solution.py  test_utils.py  test_vrptw.py
tests/write/: test_write_instance.py  test_write_solution.py
vrplib/: Solution.py  __init__.py
vrplib/download/: __init__.py  download_instance.py  download_set.py  download_solution.py  download_utils.py  instance_data.csv  list_names.py
vrplib/parse/: Instance.py  __init__.py  parse_distances.py  parse_durations.py  parse_solomon.py  parse_solution.py  parse_utils.py  parse_vrplib.py
vrplib/read/: __init__.py  read_instance.py  read_solution.py
vrplib/write/: __init__.py  write_instance.py  write_solution.py
(+20393 files in other folders)
