[tool.poetry]
name = "vrplib"
version = "1.5.1"
description = "Python library for reading and writing VRP instances."
authors = ["Leon Lan <leon.lanyidong@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PyVRP/VRPLIB"

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=1.19.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
codecov = "^2.1.13"
pytest-cov = "^4.0.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=xml"
pythonpath = [".", "vrplib"]

[tool.coverage.run]
omit = [
    "tests/*",
]
